[develop]reset password fixed

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,7 @@
 <script src="app/controller/assignCollaborator.js"></script>
 <script src="app/controller/registerTrainingCollaborator.js"></script>
 <script src="app/controller/registerCollaborator.js"></script>
+<script src="app/controller/resetPassword.js"></script>
 <script src="app/controller/registerTrainingTopic.js"></script>
 <script src="app/controller/main.js"></script>
 </body>
