--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,6 +22,7 @@
 <div id="newVue" v-cloak>
     <router-view></router-view>
 </div>
+<script src="app/controller/trainingToCome.js"></script>
 <script src="app/controller/assignCollaborator.js"></script>
 <script src="app/controller/registerTrainingCollaborator.js"></script>
 <script src="app/controller/registerCollaborator.js"></script>
