Ajouté stateRequestTrainig.js et mofification du bootsrap de la page registerTrainigCollaborators.js

--- a/src/main/webapp/registerTrainingCollaborator.html
+++ b/src/main/webapp/registerTrainingCollaborator.html
@@ -19,8 +19,12 @@
 <div id="newVue" v-cloak>
     <blue-header></blue-header>
     <collaborator-formation></collaborator-formation>
+    <div class="col-sm-12 col-md-5 col-lg-5">
+        <state-request></state-request>
+    </div>
 </div>
 <script src="app/controller/registerTrainingCollaborator.js"></script>
 <script src="app/controller/main.js"></script>
+<script src="app/controller/stateRequestTraining.js"></script>
 </body>
 </html>
