--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,11 +22,13 @@
 <div id="newVue" v-cloak>
     <router-view></router-view>
 </div>
+
 <script src="app/controller/assignCollaborator.js"></script>
 <script src="app/controller/registerTrainingCollaborator.js"></script>
 <script src="app/controller/registerCollaborator.js"></script>
 <script src="app/controller/resetPassword.js"></script>
 <script src="app/controller/registerTrainingTopic.js"></script>
+<script src="app/controller/stateRequestTraining.js"></script>
 <script src="app/controller/main.js"></script>
 </body>
 </html>
