[US#GF24] HTML global formation à venir terminé.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/registerTrainingCollaborator.css">
     <link rel="stylesheet" href="css/signInSignUp.css">
     <link rel="stylesheet" href="css/assignCollaborator.css">
+    <link rel="stylesheet" href="css/trainingToCome.css">
     <script src="lib/vue.js"></script>
     <script src="lib/vue-strap.js"></script>
     <script src="lib/vue-resource.js"></script>
