--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/signInSignUp.css">
     <link rel="stylesheet" href="css/assignCollaborator.css">
     <link rel="stylesheet" href="css/trainingToCome.css">
+    <link rel="stylesheet" href="css/wishToVote.css">
     <script src="lib/vue.js"></script>
     <script src="lib/vue-strap.js"></script>
     <script src="lib/vue-resource.js"></script>
