[develop] Ajout du title sur chaque page (onglet)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Enregistrement collaborateur</title>
+    <title>Accueil C360</title>
     <script src="lib/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/signInSignUp.css">
