[develop] Ajout d'icone d'onglet

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Accueil C360</title>
+    <link id="dynamic-favicon" rel="icon" type="image/png" href="img/icon_formation.png" />
     <script src="lib/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/signInSignUp.css">
