[US#GF27] Ajout du HTML pour le component collect-wishes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/assignCollaborator.css">
     <link rel="stylesheet" href="css/trainingToCome.css">
     <link rel="stylesheet" href="css/wishToVote.css">
+    <link rel="stylesheet" href="css/collectWishes.css">
     <script src="lib/vue.js"></script>
     <script src="lib/vue-strap.js"></script>
     <script src="lib/vue-resource.js"></script>
@@ -23,6 +24,7 @@
 <div id="newVue" v-cloak>
     <router-view></router-view>
 </div>
+<script src="app/controller/collectWishes.js"></script>
 <script src="app/controller/wishToVote.js"></script>
 <script src="app/controller/base.js"></script>
 <script src="app/controller/trainingToCome.js"></script>
