[develop] Améliore l'affichage des listes de collaborateurs

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/assignCollaborator.css">
     <link rel="stylesheet" href="css/trainingToCome.css">
     <link rel="stylesheet" href="css/wishToVote.css">
+    <link rel="stylesheet" href="https://unpkg.com/simplebar@2.4.1/dist/simplebar.css" />
+    <script src="https://unpkg.com/simplebar@2.4.1/dist/simplebar.js"></script>
     <script src="lib/vue.js"></script>
     <script src="lib/vue-strap.js"></script>
     <script src="lib/vue-resource.js"></script>
