--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/assignCollaborator.css">
     <link rel="stylesheet" href="css/trainingToCome.css">
     <link rel="stylesheet" href="css/wishToVote.css">
+    <link rel="stylesheet" href="css/skillsStatementByCollaborators.css">
     <script src="lib/vue.js"></script>
     <script src="lib/vue-strap.js"></script>
     <script src="lib/vue-resource.js"></script>
@@ -23,6 +24,7 @@
 <div id="newVue" v-cloak>
     <router-view></router-view>
 </div>
+<script src ="app/controller/skillsStatementByCollaborators.js"></script>
 <script src="app/controller/wishToVote.js"></script>
 <script src="app/controller/base.js"></script>
 <script src="app/controller/trainingToCome.js"></script>
@@ -33,5 +35,6 @@
 <script src="app/controller/registerTrainingTopic.js"></script>
 <script src="app/controller/stateRequestTraining.js"></script>
 <script src="app/controller/main.js"></script>
+
 </body>
 </html>
