--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/wishToVote.css">
     <link rel="stylesheet" href="css/skillsStatementByCollaborators.css">
     <link rel="stylesheet" href="css/sweetalert2.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
     <!--<link rel="stylesheet" type="text/css" href="bower_components/sweetalert2/dist/sweetalert2.min.css">-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.css">
 
@@ -24,6 +25,8 @@
     <script src="lib/vue-resource.js"></script>
     <script src="lib/sweetalert2.min.js"></script>
     <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="lib/jwt-decode.js"></script>
     <script src="lib/vue-router.js"></script>
