[develop] Date de début  d'une session

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,6 +27,7 @@
 <div id="newVue" v-cloak>
     <router-view></router-view>
 </div>
+<script src="app/controller/addSession.js"></script>
 <script src="app/controller/profilToUpdate.js"></script>
 <script src="app/controller/stateRequestTraining.js"></script>
 <script src="app/controller/collectWishes.js"></script>
