--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/wishToVote.css">
     <link rel="stylesheet" href="css/skillsStatementByCollaborators.css">
     <link rel="stylesheet" href="css/sweetalert2.min.css">
+    <link rel="stylesheet" href="css/trainingRankingByOpinions.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.css">
 
 
@@ -42,6 +43,7 @@
 <script src="app/controller/resetPassword.js"></script>
 <script src="app/controller/registerTrainingTopic.js"></script>
 <script src="app/controller/stateRequestTraining.js"></script>
+<script src="app/controller/trainingRankingByOpinions.js"></script>
 <script src="app/controller/main.js"></script>
 
 </body>
