[develop] Ajustement box + scroll

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link id="dynamic-favicon" rel="icon" type="image/png" href="img/icon_formation.png" />
     <script src="lib/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
