[US#GF14] Améliorations commentaires

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,8 @@
     <link id="dynamic-favicon" rel="icon" type="image/png" href="img/icon_formation.png" />
     <script src="lib/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/signInSignUp.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/addTrainingTopic.css">
