--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link id="dynamic-favicon" rel="icon" type="image/png" href="img/icon_formation.png" />
-    <script src="lib/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/simplebar.css"/>
     <link rel="stylesheet" href="css/signInSignUp.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/addTrainingTopic.css">
@@ -13,23 +12,15 @@
     <link rel="stylesheet" href="css/assignCollaborator.css">
     <link rel="stylesheet" href="css/trainingToCome.css">
     <link rel="stylesheet" href="css/wishToVote.css">
-    <link rel="stylesheet" href="https://unpkg.com/simplebar@2.4.1/dist/simplebar.css"/>
-    <script src="https://unpkg.com/simplebar@2.4.1/dist/simplebar.js"></script>
     <link rel="stylesheet" href="css/collectWishes.css">
     <link rel="stylesheet" href="css/profilToUpdate.css">
     <link rel="stylesheet" href="css/skillsStatementByCollaborators.css">
-    <link rel="stylesheet" href="css/sweetalert2.min.css">
     <link rel="stylesheet" href="css/trainingRankingByOpinions.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert.min.css">
-
-
     <script src="lib/vue.js"></script>
+    <script src="lib/jquery.min.js"></script>
+    <script src="lib/simplebar.js"></script>
     <script src="lib/vue-strap.js"></script>
     <script src="lib/vue-resource.js"></script>
-    <script src="lib/sweetalert2.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="lib/jwt-decode.js"></script>
     <script src="lib/vue-router.js"></script>
 </head>
