[skillConnection] add modal

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/admin/collectWishes.css">
     <link rel="stylesheet" href="css/profilToUpdate.css">
     <link rel="stylesheet" href="css/admin/trainingRankingByOpinions.css">
+    <link rel="stylesheet" href="css/admin/saveSkillTopic.css">
     <script src="lib/vue.js"></script>
     <script src="lib/jquery.min.js"></script>
     <script src="lib/simplebar.js"></script>
@@ -39,6 +40,7 @@
 <script src="app/controller/registerCollaborator.js"></script>
 <script src="app/controller/resetPassword.js"></script>
 <script src="app/controller/adminController/registerTrainingTopic.js"></script>
+<script src="app/controller/adminController/saveSkillModal.js"></script>
 <script src="app/controller/adminController/trainingRankingByOpinions.js"></script>
 <script src="app/controller/main.js"></script>
 </body>
