[skillConnection] Finir de l'API de Formation pour ajouter une compétence

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="css/profilToUpdate.css">
     <link rel="stylesheet" href="css/admin/trainingRankingByOpinions.css">
     <link rel="stylesheet" href="css/admin/saveSkillTopic.css">
+    <link rel="stylesheet" href="https://unpkg.com/vue-multiselect@2.0.0/dist/vue-multiselect.min.css">
+
+    <!--  <link rel="stylesheet" href="css/admin/vue-multiselect.min.css"> -->
     <script src="lib/vue.js"></script>
     <script src="lib/jquery.min.js"></script>
     <script src="lib/simplebar.js"></script>
@@ -23,6 +26,8 @@
     <script src="lib/vue-resource.js"></script>
     <script src="lib/jwt-decode.js"></script>
     <script src="lib/vue-router.js"></script>
+    <script src="lib/vue-multiselect.min.js"></script>
+    <!-- <script src="https://unpkg.com/vue-multiselect@2.0.0"></script> -->
 </head>
 <body>
 <div id="newVue" v-cloak>
