--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,6 +27,7 @@
     <script src="lib/jwt-decode.js"></script>
     <script src="lib/vue-router.js"></script>
     <script src="lib/vue-multiselect.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.4/lodash.min.js"></script>
     <!-- <script src="https://unpkg.com/vue-multiselect@2.0.0"></script> -->
 </head>
 <body>
