--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,6 +28,7 @@
     <script src="lib/vue-router.js"></script>
     <script src="lib/vue-multiselect.min.js"></script>
     <script src="lib/lodash.min.js"></script>
+    <script src="lib/sha256.js"></script>
     <!-- <script src="https://unpkg.com/vue-multiselect@2.0.0"></script> -->
 </head>
 <body>
