[dev] fix security secret bug  & add config file

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,6 +49,7 @@
 <script src="app/controller/adminController/registerTrainingTopic.js"></script>
 <script src="app/controller/adminController/saveSkillModal.js"></script>
 <script src="app/controller/adminController/trainingRankingByOpinions.js"></script>
+<script src="app/controller/config.js"></script>
 <script src="app/controller/main.js"></script>
 </body>
 </html>
